...

  // 사용자에게 경고 또는 입력 오류 메세지 보여주는 다이얼로그
  void _showWarning(String message) {
    showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: const Text('입력 오류'),
        content: Text(message),
        actions: [
          TextButton(
            onPressed: () => Navigator.pop(context),
            child: const Text('확인'),
          ),
        ],
      ),
    );
  }

  // 회원가입 성공시 사용자에게 회원가입 완료를 알리는 다이얼로그
  void _showSuccessDialog() {
    // 확인 버튼을 누르면 다이얼로그와 회원가입 페이지를 모두 닫고 이전 화면으로 돌아감(로그인 화면)
    showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: const Text('가입 완료'),
        content: const Text('요청이 처리되었습니다. 가입된 계정이면 로그인해 주세요.'),
        actions: [
          TextButton(
            onPressed: () {
              Navigator.pop(context);
              Navigator.pop(context);
...
                child: Form(
                  key: _formKey,
                  child: Column(
                    crossAxisAlignment: CrossAxisAlignment.start,
                    children: [
                      const Text(
                        '회원가입',
                        style: TextStyle(
                          fontSize: 28,
                          fontWeight: FontWeight.bold,
                        ),
                      ),
                      const SizedBox(height: 30),
...
                            backgroundColor: const Color(0xFF81C784),
                            shape: RoundedRectangleBorder(
                              borderRadius: BorderRadius.circular(12),
                            ),
                          ),
                          child: const Text(
                            '가입하기',
                            style: TextStyle(
                              fontSize: 18,
                              fontWeight: FontWeight.bold,
                              color: Colors.white,
                            ),
                          ),
...
